--- a/pages/cat.Utilities/asset-sucker/index.html
+++ b/pages/cat.Utilities/asset-sucker/index.html
@@ -88,13 +88,10 @@
 </div>
 <div class="lightbox" id="lightbox"></div>
 
-<!-- JSZip (UMD) -->
 <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-
-<!-- Main app (ESM) + pdf.js (ESM) -->
 <script type="module">
-  import * as pdfjsLib from "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.6.82/build/pdf.min.mjs";
-  pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.6.82/build/pdf.worker.min.mjs";
+  import * as pdfjsLib from "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.6.82/build/pdf.mjs";
+  pdfjsLib.GlobalWorkerOptions.workerSrc="https://cdn.jsdelivr.net/npm/pdfjs-dist@4.6.82/build/pdf.worker.mjs";
 
   let loading=false, allAssets=[], counts=null, activeTab='all', lightboxIndex=null, errorMessage='', lastFileName='';
   const $=s=>document.querySelector(s);
@@ -105,7 +102,6 @@
   const dataURLtoUint8Array=u=>{const b64=u.split(',')[1]; const bin=atob(b64); const len=bin.length; const arr=new Uint8Array(len); for(let i=0;i<len;i++) arr[i]=bin.charCodeAt(i); return arr};
   const uniq=arr=>Array.from(new Map(arr.map(a=>[a.url,a])).values());
   const byCategory=c=>allAssets.filter(a=>c==='all'||a.category===c);
-  const formatName=(base,i,ext)=>`${base}_${String(i).padStart(3,'0')}.${ext}`;
   const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
 
   function render(){
@@ -151,7 +147,7 @@
     if(!fileInput.files.length){ errorMessage='Pick a PDF first.'; render(); return }
     loading=true; setStatus('Loading PDF…'); allAssets=[]; counts=null; errorMessage=''; render();
     try{
-      const file=fileInput.files[0]; lastFileName=(file.name||'document').replace(/\.[^.]+$/,'')||'document';
+      const file=fileInput.files[0]; const base=(file.name||'document').replace(/\.[^.]+$/,'')||'document';
       const ab=await file.arrayBuffer();
       const pdf=await pdfjsLib.getDocument({data:ab}).promise;
       const mode=modeSelect.value, scale=clamp(parseFloat(scaleSlider.value)||2,1,3);
@@ -164,11 +160,11 @@
           const c=document.createElement('canvas'); const ctx=c.getContext('2d',{willReadFrequently:true});
           c.width=viewport.width; c.height=viewport.height;
           await page.render({canvasContext:ctx,viewport}).promise;
-          const url=c.toDataURL('image/png'); assets.push({url,category:'pages',name:`${lastFileName}_page_${String(p).padStart(3,'0')}.png`,ext:'png',w:c.width,h:c.height});
+          const url=c.toDataURL('image/png'); assets.push({url,category:'pages',name:`${base}_page_${String(p).padStart(3,'0')}.png`,ext:'png',w:c.width,h:c.height});
         }
         if(mode!=='pages'){
           const grabbed=await grabEmbeddedImages(page,viewport);
-          grabbed.forEach((g,i)=>assets.push({url:g.url,category:'images',name:`${lastFileName}_p${String(p).padStart(3,'0')}_img_${String(i+1).padStart(2,'0')}.${g.ext}`,ext:g.ext,w:g.w,h:g.h}));
+          grabbed.forEach((g,i)=>assets.push({url:g.url,category:'images',name:`${base}_p${String(p).padStart(3,'0')}_img_${String(i+1).padStart(2,'0')}.${g.ext}`,ext:g.ext,w:g.w,h:g.h}));
         }
       }
       allAssets=uniq(assets);
@@ -184,10 +180,20 @@
     c.width=viewport.width; c.height=viewport.height;
     const seen=new WeakSet(), out=[];
     const orig=ctx.drawImage.bind(ctx);
-    ctx.drawImage=function(img, ...rest){
-      try{ if(!seen.has(img)){ seen.add(img); const w=img.width||img.videoWidth||rest[2]||rest[4]||0; const h=img.height||img.videoHeight||rest[3]||rest[5]||0;
-        if(w>4&&h>4){ const t=document.createElement('canvas'); const tctx=t.getContext('2d'); t.width=w; t.height=h; tctx.drawImage(img,0,0,w,h); const url=t.toDataURL('image/png'); out.push({url,ext:'png',w,h}) } } }catch{}
-      return orig(img, ...rest);
+    ctx.drawImage=function(img,...rest){
+      try{
+        if(!seen.has(img)){
+          seen.add(img);
+          const w=img.width||img.videoWidth||rest[2]||rest[4]||0;
+          const h=img.height||img.videoHeight||rest[3]||rest[5]||0;
+          if(w>4&&h>4){
+            const t=document.createElement('canvas'); const tctx=t.getContext('2d');
+            t.width=w; t.height=h; tctx.drawImage(img,0,0,w,h);
+            const url=t.toDataURL('image/png'); out.push({url,ext:'png',w,h});
+          }
+        }
+      }catch{}
+      return orig(img,...rest);
     };
     await page.render({canvasContext:ctx,viewport}).promise;
     return out;
@@ -198,18 +204,16 @@
     loading=true; setStatus('Zipping…'); render();
     try{
       const zip=new JSZip();
-      const base=lastFileName||'assets';
-      allAssets.forEach((a,i)=>{ const data=dataURLtoUint8Array(a.url); zip.file(a.name||formatName(base,i+1,a.ext||extFromDataUrl(a.url)),data) });
+      allAssets.forEach(a=>zip.file(a.name,(function(u){const b64=u.split(',')[1]; const bin=atob(b64); const len=bin.length; const arr=new Uint8Array(len); for(let i=0;i<len;i++) arr[i]=bin.charCodeAt(i); return arr})(a.url)));
       const blob=await zip.generateAsync({type:'blob'});
-      const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download=`assets_${base}.zip`; document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(a.href); setStatus('ZIP ready');
+      const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download=`assets.zip`; document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(a.href); setStatus('ZIP ready');
     }catch(e){ errorMessage=e?.message||'ZIP failed.'; setStatus('Error') }
     finally{ loading=false; render() }
   }
 
-  const tabsBar=document.querySelector('#tabs-bar'), gridContainer=document.querySelector('#grid-container'), lightbox=document.querySelector('#lightbox');
-  document.querySelector('#extract-btn').addEventListener('click',extract);
-  document.querySelector('#zip-btn').addEventListener('click',downloadZip);
-  document.querySelector('#density-slider').addEventListener('input',e=>document.documentElement.style.setProperty('--tile',`${e.target.value}px`));
+  extractBtn.addEventListener('click',extract);
+  zipBtn.addEventListener('click',downloadZip);
+  densitySlider.addEventListener('input',e=>document.documentElement.style.setProperty('--tile',`${e.target.value}px`));
   tabsBar.addEventListener('click',e=>{ if(e.target.classList.contains('tab')){ activeTab=e.target.dataset.tab; render() } });
   gridContainer.addEventListener('click',e=>{ const tile=e.target.closest('.tile'); const copyBtn=e.target.closest('[data-copy-url]'); if(copyBtn){ navigator.clipboard.writeText(copyBtn.dataset.copyUrl); return } if(e.target.closest('a,button')) return; if(tile) openLightbox(parseInt(tile.dataset.index,10)) });
   lightbox.addEventListener('click',e=>{ if(e.target.closest('.lb-close')) closeLightbox(); else if(e.target.closest('.navprev')) openLightbox(lightboxIndex-1); else if(e.target.closest('.navnext')) openLightbox(lightboxIndex+1); else if(!e.target.closest('.lb-card')) closeLightbox() });
