--- a/pages/cat.Utilities/diranalyze2/index.html
+++ b/pages/cat.Utilities/diranalyze2/index.html
@@ -70,7 +70,8 @@
               <button class="btn has-tip" data-tip="Pick a folder from your machine" id="selectBtn">
                 <svg class="ico"><use href="#i-download"/></svg> Select Folder
               </button>
-              <input id="folderInput" type="file" style="display:none" webkitdirectory directory multiple />
+              <input id="folderInput" type="file" webkitdirectory directory multiple
+       style="position:fixed; left:-9999px; top:-9999px; width:1px; height:1px; opacity:0;" />
             </div>
           </div>
         </div>
