--- a/pages/cat.AI/pixshop/index.html
+++ b/pages/cat.AI/pixshop/index.html
@@ -31,6 +31,7 @@
     .dot{position:absolute;width:14px;height:14px;border-radius:999px;background:radial-gradient(circle at 30% 30%,#fff,rgba(255,255,255,.3));border:2px solid rgba(255,255,255,.7);transform:translate(-50%,-50%);pointer-events:none;display:none}
     .meta{display:flex;gap:10px;align-items:center;color:var(--muted);font-size:12px;margin-top:8px}
     .log{margin-top:10px;color:var(--muted);font:12px ui-monospace,Consolas,Menlo,monospace;white-space:pre-wrap}
+    progress{width:100%;height:10px;border-radius:12px}
   </style>
 </head>
 <body>
@@ -75,6 +76,10 @@
                 <button id="download" class="secondary" disabled>Download</button>
               </div>
 
+              <div style="margin-top:10px">
+                <progress id="prog" max="100" value="0" style="display:none"></progress>
+              </div>
+
               <div class="log" id="log"></div>
             </div>
           </div>
@@ -98,6 +103,8 @@
       </div>
     </div>
   </div>
+
+  <!-- Keep ai.js available for the rest of your site, but Pixshop bypasses it to avoid double-reading the Response body -->
   <script src="/ai.js"></script>
   <script type="module" src="./app.js"></script>
 </body>
