--- a/pages/cat.AI/pixshop/index.html
+++ b/pages/cat.AI/pixshop/index.html
@@ -17,6 +17,7 @@
     .col{flex:1;min-width:280px}
     .panel{background:var(--panel);border:1px solid var(--border);border-radius:14px;padding:12px}
     label{display:block;margin:6px 0 6px;color:var(--muted)}
+    textarea,input,select,button{font:inherit}
     textarea,input,select{width:100%;background:#0c1221;border:1px solid var(--border);color:var(--text);padding:10px 12px;border-radius:10px;outline:none}
     textarea:focus,input:focus,select:focus{box-shadow:0 0 0 3px rgba(124,156,255,.3)}
     .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
@@ -33,7 +34,6 @@
     progress{width:100%;height:10px;border-radius:12px}
     .grid2{display:grid;grid-template-columns:1fr 1fr;gap:8px}
     @media (max-width:860px){.grid2{grid-template-columns:1fr}}
-    small[data-hide]{display:none}
   </style>
 </head>
 <body>
@@ -41,7 +41,7 @@
     <div class="card">
       <div class="header">
         <h1 class="title">Pixshop <span class="kicker">— minimal image edit via Gemini</span></h1>
-        <p class="kicker">Upload an image, optionally set a focus point (retouch), or extend the canvas (outcrop). Strong constraints prevent unwanted changes.</p>
+        <p class="kicker">Upload → set focus (retouch) or extend (outcrop). Strong constraints keep existing pixels untouched.</p>
       </div>
       <div class="content">
         <div class="row">
@@ -91,14 +91,16 @@
                     <option value="0.50">50%</option>
                   </select>
                 </div>
-                <small class="kicker">We’ll add a black strip on that side and ask Gemini to fill ONLY that strip, keeping the original untouched.</small>
+                <small class="kicker">We create a larger canvas with a black blank strip of width 2× the final extension, ask Gemini to fill only the black area, then blend the inner half back over the original.</small>
               </div>
 
               <label style="margin-top:10px">Prompt</label>
-              <textarea id="prompt" rows="6" placeholder="Optional. e.g., extend the water and ice ridge, continue penguins naturally."></textarea>
+              <textarea id="prompt" rows="6" placeholder="Optional. e.g., continue river and cliffs seamlessly."></textarea>
 
               <div class="actions">
                 <button id="run">Generate</button>
+                <button id="undo" class="secondary" disabled>Undo</button>
+                <button id="redo" class="secondary" disabled>Redo</button>
                 <button id="clear" class="secondary">Clear</button>
                 <button id="download" class="secondary" disabled>Download</button>
               </div>
@@ -123,7 +125,7 @@
               </div>
             </div>
             <div class="col">
-              <small class="kicker">Tip: Retouch → click the source image to set a focus point.</small>
+              <small class="kicker">Tip (retouch): click the source image to set a focus point.</small>
             </div>
           </div>
         </div>
@@ -131,7 +133,7 @@
     </div>
   </div>
 
-  <!-- Keep ai.js available for the rest of your site; Pixshop bypasses it to avoid double-reading the Response body -->
+  <!-- Keep ai.js for the rest of your site; Pixshop bypasses it to avoid double-reading Response bodies -->
   <script src="/ai.js"></script>
   <script type="module" src="./app.js"></script>
 </body>
