--- a/pages/cat.AI/pixshop/index.html
+++ b/pages/cat.AI/pixshop/index.html
@@ -34,6 +34,7 @@
     progress{width:100%;height:10px;border-radius:12px}
     .grid2{display:grid;grid-template-columns:1fr 1fr;gap:8px}
     @media (max-width:860px){.grid2{grid-template-columns:1fr}}
+    canvas{max-width:100%}
   </style>
 </head>
 <body>
@@ -41,7 +42,7 @@
     <div class="card">
       <div class="header">
         <h1 class="title">Pixshop <span class="kicker">— minimal image edit via Gemini</span></h1>
-        <p class="kicker">Upload → retouch or outcrop. Outcrop uses a snippet+overlap+yellow-mask so alignment is rock solid.</p>
+        <p class="kicker">Upload → retouch or outcrop. Outcrop uses a snippet+overlap+yellow-mask; you can tweak fade/offset/scale after generation.</p>
       </div>
       <div class="content">
         <div class="row">
@@ -91,7 +92,7 @@
                     <option value="0.50">50%</option>
                   </select>
                 </div>
-                <small class="kicker">We build a snippet with an overlap strip + a yellow (#FFFF00) blank area. Gemini may change only yellow.</small>
+                <small class="kicker">We send a snippet with overlap + a yellow area to fill. You can fine-tune the seam below.</small>
               </div>
 
               <label style="margin-top:10px">Prompt</label>
@@ -117,7 +118,7 @@
         <hr style="border:none;border-top:1px solid var(--border);margin:16px 0"/>
 
         <div class="panel" id="resultPanel">
-          <label>Result</label>
+          <label>Result (non-outcrop modes)</label>
           <div class="row">
             <div class="col">
               <div class="drop" style="aspect-ratio:auto;min-height:240px">
@@ -127,6 +128,44 @@
             <div class="col">
               <small class="kicker">Tip (retouch): click the source image to set a focus point.</small>
             </div>
+          </div>
+        </div>
+
+        <div class="panel" id="debugPanel" style="display:none;margin-top:12px">
+          <label>Blend debugger (after outcrop)</label>
+          <div class="grid2" style="margin-bottom:8px">
+            <div>
+              <label>View</label>
+              <select id="dbg_view">
+                <option value="composite">Composite</option>
+                <option value="original">Original only</option>
+                <option value="extMasked">Extension (masked)</option>
+                <option value="mask">Mask only</option>
+                <option value="snippet">Sent snippet</option>
+                <option value="gen">Returned snippet</option>
+              </select>
+            </div>
+            <div></div>
+            <div>
+              <label>Fade (px)</label>
+              <input id="dbg_fade" type="range" min="0" max="128" step="1" value="64" />
+            </div>
+            <div>
+              <label>Offset (px)</label>
+              <input id="dbg_offset" type="range" min="-128" max="128" step="1" value="0" />
+            </div>
+            <div>
+              <label>Scale (%)</label>
+              <input id="dbg_scale" type="range" min="95" max="105" step="0.1" value="100" />
+            </div>
+          </div>
+          <div class="actions">
+            <button id="dbg_apply">Apply to Image</button>
+            <button id="dbg_recompose" class="secondary">Recompose</button>
+            <button id="dbg_close" class="secondary">Close</button>
+          </div>
+          <div style="margin-top:10px">
+            <canvas id="dbg_canvas"></canvas>
           </div>
         </div>
 
